--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ node_modules/
 .cache
 .parcel-cache
 
+forkify-architecture-recipe-loading.png
+forkify-flowchart-part-1.png
+forkify-flowchart-part-2.png
+forkify-flowchart-part-3.png
+
+package-lock.json
